--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Crickdle - Daily Cricket Guessing Game!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<style>
 			html {
 				box-sizing: border-box;
@@ -21,7 +22,7 @@
 			}
 
 			body {
-				font-family: 'Montserrrat', sans-serif;
+				font-family: 'Montserrrat';
 				font-weight: 400;
 				font-size: 1rem;
 				line-height: 1.5;
@@ -29,7 +30,7 @@
 			}
 
 			h1, h2, h3, h4, h5, h6 {
-				font-family: 'Montserrat', sans-serif;
+				font-family: 'Montserrat';
 				font-weight: 700;
 				line-height: 1.2;
 				margin-top: 0;
