--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 			#match-details {
 				text-align: center;
 				margin-bottom: 25px;
+				font-family: 'Montserrat';
 			}
 
 			#match-details p {
 				margin: 0.2rem 0;
 				font-size: 1.1rem;
 				font-weight: 500;
+				font-family: 'Montserrat';
 			}
 
 			#guess-section {
@@ -69,6 +71,7 @@
 			#guess-section h2 {
 				margin-bottom: 0.5rem;
 				font-size: 1.1rem;
+				font-family: 'Montserrat';
 			}
 
 			.guess-input {
@@ -81,6 +84,7 @@
 			.guess-input label {
 				margin-right: 0.5rem;
 				font-size: 1.2rem;
+				font-family: 'Montserrat';
 			}
 
 			.guess-input input {
@@ -94,6 +98,7 @@
 				max-width: 200px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
+				font-family: 'Montserrat';
 			}
 
 			.guess-input input:focus {
@@ -113,6 +118,7 @@
 				transition: all 0.2s ease-in-out;
 				width: 40%;
 				max-width: 150px;
+				font-family: 'Montserrat';
 			}
 
 			.guess-input button:disabled {
@@ -129,14 +135,17 @@
 			#congratulations p, #answer p {
 				margin: 0.5rem 0;
 				font-size: 1.1rem;
+				font-family: 'Montserrat';
 			}
 
 			#congratulations {
 				color: #1dc278;
+				font-family: 'Montserrat';
 			}
 
 			#answer {
 				color: #f03a17;
+				font-family: 'Montserrat';
 			}
 		  
 			.toolbar {
@@ -160,6 +169,7 @@
 				font-weight: bold;
 				margin: 0;
 				color: #1dc278;
+				font-family: 'Montserrat';
 			}
 
 			.toolbar-help {
@@ -198,12 +208,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
+				font-family: 'Montserrat';
 			}
 
 			.popup-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
+				font-family: 'Montserrat';
 			}
 
 			.popup-close {
@@ -212,12 +224,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
+				font-family: 'Montserrat';
 			}
 
 			.popup-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
+				font-family: 'Montserrat';
 			}
 		</style>
 	</head>
