--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<title>Crickdle - Daily Cricket Guessing Game!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<style>
 			html {
 				box-sizing: border-box;
@@ -22,7 +21,7 @@
 			}
 
 			body {
-				font-family: 'Montserrrat';
+				font-family: Arial, sans-serif;
 				font-weight: 400;
 				font-size: 1rem;
 				line-height: 1.5;
@@ -30,7 +29,7 @@
 			}
 
 			h1, h2, h3, h4, h5, h6 {
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 				font-weight: 700;
 				line-height: 1.2;
 				margin-top: 0;
@@ -53,14 +52,14 @@
 			#match-details {
 				text-align: center;
 				margin-bottom: 25px;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			#match-details p {
 				margin: 0.2rem 0;
 				font-size: 1.1rem;
 				font-weight: 500;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			#guess-section {
@@ -71,7 +70,7 @@
 			#guess-section h2 {
 				margin-bottom: 0.5rem;
 				font-size: 1.1rem;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.guess-input {
@@ -84,7 +83,7 @@
 			.guess-input label {
 				margin-right: 0.5rem;
 				font-size: 1.2rem;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.guess-input input {
@@ -98,7 +97,7 @@
 				max-width: 200px;
 				transition: all 0.2s ease-in-out;
 				text-transform: uppercase;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.guess-input input:focus {
@@ -118,7 +117,7 @@
 				transition: all 0.2s ease-in-out;
 				width: 40%;
 				max-width: 150px;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.guess-input button:disabled {
@@ -135,17 +134,17 @@
 			#congratulations p, #answer p {
 				margin: 0.5rem 0;
 				font-size: 1.1rem;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			#congratulations {
 				color: #1dc278;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			#answer {
 				color: #f03a17;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 		  
 			.toolbar {
@@ -169,7 +168,7 @@
 				font-weight: bold;
 				margin: 0;
 				color: #1dc278;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.toolbar-help {
@@ -208,14 +207,14 @@
 				justify-content: space-between;
 				align-items: center;
 				margin-bottom: 8px;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.popup-header h2 {
 				margin: 0;
 				font-size: 20px;
 				color: #1dc278;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.popup-close {
@@ -224,14 +223,14 @@
 				font-size: 24px;
 				cursor: pointer;
 				color: #f03a17;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 
 			.popup-content {
 				margin: 0;
 				font-size: 18px;
 				line-height: 1.5;
-				font-family: 'Montserrat';
+				font-family: Arial, sans-serif;
 			}
 		</style>
 	</head>
