--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to test cricket, inspired by the hit game Wordle.</p>
+						<p>Crickdle is a love letter to Test cricket, inspired by the hit game Wordle.</p>
 					</div>
 				</div>
 			</div>
