--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				font-size: 12px;
+				width: 15px;
 				padding: 0 15px;
 			}
 
@@ -237,7 +237,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				font-size: 15px;
+				width: 15px;
 				padding: 0 15px;
 			}
 
@@ -301,11 +301,11 @@
 			<div class="toolbar">
 				<div class="toolbar-logo">
 					<button class="toolbar-info" aria-label="About">
-						&#8505;
+						<img src=Info.png/>
 					</button>
 					<span class="toolbar-title">CRICKDLE</span>
 					<button class="toolbar-help" aria-label="How to play">
-						&#10067;
+						<img src=Help.png/>
 					</button>
 				</div>
 			</div>
