--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				border: none;
 				cursor: pointer;
 				width: 15px;
-				padding: 0 15px;
+				left-padding: 15px;
 			}
 
 			.popup-background {
@@ -238,7 +238,7 @@
 				border: none;
 				cursor: pointer;
 				width: 15px;
-				padding: 0 15px;
+				right-padding: 15px;
 			}
 
 			.popup2-background {
