--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				border: none;
 				cursor: pointer;
 				width: 15px;
-				left-padding: 15px;
+				padding-left: 15px;
 			}
 
 			.popup-background {
@@ -238,7 +238,7 @@
 				border: none;
 				cursor: pointer;
 				width: 15px;
-				right-padding: 15px;
+				padding-right: 15px;
 			}
 
 			.popup2-background {
@@ -301,11 +301,11 @@
 			<div class="toolbar">
 				<div class="toolbar-logo">
 					<button class="toolbar-info" aria-label="About">
-						<img src=Info.png/>
+						<img src="Info.png">
 					</button>
 					<span class="toolbar-title">CRICKDLE</span>
 					<button class="toolbar-help" aria-label="How to play">
-						<img src=Help.png/>
+						<img src="Help.png">
 					</button>
 				</div>
 			</div>
