--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				width: 15px;
-				padding-left: 15px;
+				width: 5px;
+				margin-left: 15px;
 			}
 
 			.popup-background {
@@ -237,8 +237,8 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				width: 15px;
-				padding-right: 15px;
+				width: 5px;
+				margin-right: 15px;
 			}
 
 			.popup2-background {
