--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				width: 5px;
-				margin-left: 15px;
+				max-width: 5px;
 			}
 
 			.popup-background {
@@ -237,8 +236,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
-				width: 5px;
-				margin-right: 15px;
+				max-width: 5px;
 			}
 
 			.popup2-background {
