--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
 			.toolbar-title {
 				font-size: 35px;
 				font-weight: bold;
-				margin: 0;
 				color: #1dc278;
 				font-family: Arial, sans-serif;
 			}
@@ -291,6 +290,12 @@
 				font-size: 18px;
 				line-height: 1.5;
 				font-family: Arial, sans-serif;
+			}
+			
+			.toolbar-help img,
+			.toolbar-info img {
+				width: 5px;
+				height: 5px;
 			}
 		</style>
 	</head>
