--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
+				margin-left: 15px;
 			}
 
 			.popup-background {
@@ -234,6 +235,7 @@
 				background: none;
 				border: none;
 				cursor: pointer;
+				margin-right: 15px;
 			}
 
 			.popup2-background {
