--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<title>Crickdle - Daily Cricket Guessing Game!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta charset="UTF-8">
+  <meta name="description" content="Crickdle - Daily Cricket Guessing Game!">
+  <meta name="keywords" content="Wordle, cricket, quiz, game, sport, bowler, batsman">
+  <meta name="author" content="Ayush Sanghavi">
 		<style>
 			html {
 				box-sizing: border-box;
@@ -306,7 +310,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png">
 					</button>
-					<span class="toolbar-title">CRICKDLE</span>
+					<span class="toolbar-title"><h1>CRICKDLE</h1></span>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png">
 					</button>
