--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png">
 					</button>
-					<span class="toolbar-title"><h1>CRICKDLE</h1></span>
+					<span class="toolbar-title">CRICKDLE</span>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png">
 					</button>
