--- a/index.html
+++ b/index.html
@@ -372,16 +372,16 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Australia",
-				nation2: "India",
-				date: "January 15 - 19, 2021",
-				score: "Australia 369 & 294, India (T: 328) 336 & 329/7; India won by 3 wickets",
-				gameNumber: 4,
+				nation1: "England",
+				nation2: "South Africa",
+				date: "July 6-9, 2017",
+				score: "England 458 & 233, South Africa (T:331) 361 & 119; England won by 211 runs",
+				gameNumber: 1,
 				totalGames: 4,
-				crickdlequestion: "Which India player scored 23 & 89* in this game?"
+				crickdlequestion: "Which England player scored 87 and took 4/59 & 6/53 in this game?"
 			};
 
-			const correctPlayer = "PANT";
+			const correctPlayer = "ALI";
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
