--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket, inspired by the hit game Wordle.<br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com.</p>
+						<p>Crickdle is a love letter to Test cricket, inspired by the hit game Wordle.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
 				</div>
 			</div>
