--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
   <meta name="description" content="Crickdle - Daily Cricket Guessing Game!">
-  <meta name="keywords" content="Wordle, cricket, quiz, game, sport, bowler, batsman">
+  <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
 		<style>
 			html {
@@ -173,6 +173,14 @@
 				color: #1dc278;
 				font-family: Arial, sans-serif;
 			}
+			
+			.toolbar-title h1 {
+				display: inline-block;
+				font-size: inherit;
+				font-weight: inherit;
+				color: inherit;
+				font-family: inherit;
+			}
 
 			.toolbar-help {
 				background: none;
@@ -310,7 +318,7 @@
 					<button class="toolbar-info" aria-label="About">
 						<img src="Info.png">
 					</button>
-					<span class="toolbar-title">CRICKDLE</span>
+					<h1 class="toolbar-title">CRICKDLE</h1>
 					<button class="toolbar-help" aria-label="How to play">
 						<img src="Help.png">
 					</button>
