--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 				font-weight: bold;
 				color: #1dc278;
 				font-family: Arial, sans-serif;
+				line-height: 50px;
 			}
 			
 			.toolbar-title h1 {
@@ -180,6 +181,7 @@
 				font-weight: inherit;
 				color: inherit;
 				font-family: inherit;
+				line-height: inherit;
 			}
 
 			.toolbar-help {
