--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 				color: #1dc278;
 				font-family: Arial, sans-serif;
 				line-height: 48px;
+				display: inline-block;
 			}
 			
 			.toolbar-title h1 {
@@ -182,6 +183,7 @@
 				color: inherit;
 				font-family: inherit;
 				line-height: inherit;
+				display: inherit;
 			}
 
 			.toolbar-help {
