--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 				background-color: #f7f7f7;
 				height: 48px;
 				display: flex;
+				flex-direction: column;
 				justify-content: center;
 				align-items: center;
 				padding: 0 16px;
