--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
 				background-color: #f7f7f7;
 				height: 48px;
 				display: flex;
-				flex-direction: column;
 				justify-content: center;
 				align-items: center;
 				padding: 0 16px;
@@ -169,17 +168,18 @@
 				color: #1dc278;
 				font-family: Arial, sans-serif;
 				line-height: 48px;
-				display: inline-block;
+				display: flex;
+				align-items: center;
 			}
 			
 			.toolbar-title h1 {
-				display: inline-block;
 				font-size: inherit;
 				font-weight: inherit;
 				color: inherit;
 				font-family: inherit;
 				line-height: inherit;
 				display: inherit;
+				align-items: inherit;
 			}
 
 			.toolbar-help {
