--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 				line-height: 48px;
 				display: flex;
 				align-items: center;
+				margin: 0;
 			}
 			
 			.toolbar-title h1 {
@@ -180,6 +181,7 @@
 				line-height: inherit;
 				display: inherit;
 				align-items: inherit;
+				margin: inherit;
 			}
 
 			.toolbar-help {
