--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Crickdle - Daily Cricket Guessing Game!</title>
+		<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
   <meta name="description" content="Crickdle - Daily Cricket Guessing Game!">
   <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org/",
+			  "@type": "Game",
+			  "name": "Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!",
+			  "description": "A daily, fun and challenging cricket player guessing game",
+			  "url": "https://www.crickdle.com",
+			  "applicationCategory": "Game",
+			  "playMode": "SinglePlayer"
+			}
 		<style>
 			html {
 				box-sizing: border-box;
@@ -317,11 +327,11 @@
 		<header>
 			<div class="toolbar">
 					<button class="toolbar-info" aria-label="About">
-						<img src="Info.png">
+						<img src="Info.png" alt="Information about Crickdle game">
 					</button>
 					<h1 class="toolbar-title">CRICKDLE</h1>
 					<button class="toolbar-help" aria-label="How to play">
-						<img src="Help.png">
+						<img src="Help.png" alt="How to play Crickdle game">
 					</button>
 			</div>
 			<div class="popup-background">
