--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
-  <meta name="description" content="Crickdle - Daily Cricket Guessing Game!">
+  <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
   <meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
   <meta name="author" content="Ayush Sanghavi">
-		<script type="application/ld+json">
-			{
-			  "@context": "https://schema.org/",
-			  "@type": "Game",
-			  "name": "Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!",
-			  "description": "A daily, fun and challenging cricket player guessing game",
-			  "url": "https://www.crickdle.com",
-			  "applicationCategory": "Game",
-			  "playMode": "SinglePlayer"
-			}
 		<style>
 			html {
 				box-sizing: border-box;
