--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Game",
+  "name": "Crickdle - Daily Cricket Guessing Game!",
+  "url": "https://crickdle.com",
+  "description": "Crickdle is a daily cricket guessing game inspired by Wordle. Test your cricket knowledge and guess the cricketer based on their stats.",
+  "dateCreated": "2023-02-19",
+  "creator": {
+    "@type": "Person",
+    "name": "Ayush Sanghavi",
+  },
+  "numberOfPlayers": "1",
+  "gamePlatform": "Web",
+  "genre": "Sports"
+}
+</script>
 		<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
