--- a/index.html
+++ b/index.html
@@ -397,16 +397,16 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "South Africa",
-				date: "July 6-9, 2017",
-				score: "England 458 & 233, South Africa (T: 331) 361 & 119; England won by 211 runs",
-				gameNumber: 1,
-				totalGames: 4,
-				crickdlequestion: "Which England player scored 87 and took 4/59 & 6/53 in this game?"
+				nation1: "Bangladesh",
+				nation2: "West Indies",
+				date: "November 21-25, 2012",
+				score: "Bangladesh 387 & 287, West Indies (T: 27) 648/9d & 30/0; West Indies won by 10 wickets",
+				gameNumber: 2,
+				totalGames: 2,
+				crickdlequestion: "Which West Indies player scored 260 in this game?"
 			};
 
-			const correctPlayer = "ALI";
+			const correctPlayer = "SAMUELS";
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
