--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<script type="application/ld+json">
 {
@@ -371,6 +371,7 @@
 			<p>Test <span id="game-number"></span> of <span id="total-games"></span></p>
 		</div>
 		<div id="guess-section">
+			<h2>Which <span id="crickdlequestion"> in this game?</span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
 				<button id="submit1"><b>ENTER</b></button>
@@ -402,7 +403,7 @@
 				score: "Bangladesh 387 & 287, West Indies (T: 27) 648/9d & 30/0; West Indies won by 10 wickets",
 				gameNumber: 2,
 				totalGames: 2,
-				crickdlequestion: "Which West Indies player scored 260 in this game?"
+				crickdlequestion: "West Indies player scored 260?"
 			};
 
 			const correctPlayer = "SAMUELS";
