--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 				score: "Bangladesh 387 & 287, West Indies (T: 27) 648/9d & 30/0; West Indies won by 10 wickets",
 				gameNumber: 2,
 				totalGames: 2,
-				crickdlequestion: "West Indies player scored 260?"
+				crickdlequestion: "West Indies player scored 260"
 			};
 
 			const correctPlayer = "SAMUELS";
