--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			<p>Test <span id="game-number"></span> of <span id="total-games"></span></p>
 		</div>
 		<div id="guess-section">
-			<h2><span id="crickdlequestion">?</span></h2>
+			<h2>Which <span id="crickdlequestion"></span></h2>
 			<div class="guess-input">
 				<input type="text" id="guess1" />
 				<button id="submit1"><b>ENTER</b></button>
@@ -403,7 +403,7 @@
 				score: "Bangladesh 387 & 287, West Indies (T: 27) 648/9d & 30/0; West Indies won by 10 wickets",
 				gameNumber: 2,
 				totalGames: 2,
-				crickdlequestion: "Which West Indies player scored 260 in this game"
+				crickdlequestion: "West Indies player scored 260 in this game?"
 			};
 
 			const correctPlayer = "SAMUELS";
