--- a/index.html
+++ b/index.html
@@ -393,16 +393,16 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Bangladesh",
-				nation2: "West Indies",
-				date: "November 21-25, 2012",
-				score: "Bangladesh 387 & 287, West Indies (T: 27) 648/9d & 30/0; West Indies won by 10 wickets",
+				nation1: "England",
+				nation2: "India",
+				date: "August 9-12, 2018",
+				score: "India 107 & 130, England 396/7d; England won by an innings and 159 runs",
 				gameNumber: 2,
-				totalGames: 2,
-				crickdlequestion: "West Indies player scored 260 in this game?"
+				totalGames: 5,
+				crickdlequestion: "England player scored 137* and took 2/19 & 2/24 in this match?"
 			};
 
-			const correctPlayer = "SAMUELS";
+			const correctPlayer = "WOAKES";
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
