--- a/index.html
+++ b/index.html
@@ -402,16 +402,16 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "India",
-				date: "August 9-12, 2018",
-				score: "India 107 & 130, England 396/7d; England won by an innings and 159 runs",
+				nation1: "Pakistan",
+				nation2: "Sri Lanka",
+				date: "January 8-12, 2014",
+				score: "Pakistan 165 & 359, Sri Lanka (T: 137) 388 & 137/1; Sri Lanka won by 9 wickets",
 				gameNumber: 2,
-				totalGames: 5,
-				crickdlequestion: "England player scored 137* and took 2/19 & 2/24 in this match?"
+				totalGames: 3,
+				crickdlequestion: "Which Sri Lanka player scored 129 in this match?"
 			};
 
-			const correctPlayer = "WOAKES";
+			const correctPlayer = "JAYAWARDENE";
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
