--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 				score: "Pakistan 165 & 359, Sri Lanka (T: 137) 388 & 137/1; Sri Lanka won by 9 wickets",
 				gameNumber: 2,
 				totalGames: 3,
-				crickdlequestion: "Which Sri Lanka player scored 129 in this match?"
+				crickdlequestion: "Sri Lanka player scored 129 in this match?"
 			};
 
 			const correctPlayer = "JAYAWARDENE";
