--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Pakistan",
-				nation2: "Sri Lanka",
-				date: "January 8-12, 2014",
-				score: "Pakistan 165 & 359, Sri Lanka (T: 137) 388 & 137/1; Sri Lanka won by 9 wickets",
-				crickdlequestion: "Sri Lanka player scored 129 in this match?"
+				nation1: "England",
+				nation2: "Pakistan",
+				date: "May 31-June 4, 2001",
+				score: "Pakistan 403 & 323, England (T: 370) 357 & 261; Pakistan won by 108 runs",
+				crickdlequestion: "Pakistan player scored 114 & 85 in this match?"
 			};
 
-			const correctPlayer = "JAYAWARDENE";
+			const correctPlayer = "UL-HAQ";
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
