--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "Pakistan",
-				date: "May 31-June 4, 2001",
-				score: "Pakistan 403 & 323, England (T: 370) 357 & 261; Pakistan won by 108 runs",
-				crickdlequestion: "Pakistan player scored 114 & 85 in this match?"
+				nation1: "New Zealand",
+				nation2: "India",
+				date: "March 18-21 2009",
+				score: "New Zealand 279 & 279, India (T: 39) 520 & 39/0; India won by 10 wickets",
+				crickdlequestion: "India player scored 160 in this match?"
 			};
 
-			const correctPlayer = ["UL-HAQ", "UL HAQ", "ULHAQ"];
+			const correctPlayer = ["TENDULKAR"];
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
