--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "India",
-				date: "March 18-21 2009",
-				score: "New Zealand 279 & 279, India (T: 39) 520 & 39/0; India won by 10 wickets",
-				crickdlequestion: "India player scored 160 in this match?"
+				nation1: "England",
+				nation2: "Australia",
+				date: "August 22-25, 2019",
+				score: "Australia 179 & 246, England (T: 359) 67 & 362/9; England won by 1 wicket",
+				crickdlequestion: "England player scored 135* and took 1/45 & 3/56 in this match?"
 			};
 
-			const correctPlayer = ["TENDULKAR"];
+			const correctPlayer = ["STOKES"];
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
