--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "Australia",
-				date: "August 22-25, 2019",
-				score: "Australia 179 & 246, England (T: 359) 67 & 362/9; England won by 1 wicket",
-				crickdlequestion: "England player scored 135* and took 1/45 & 3/56 in this match?"
+				nation1: "Pakistan",
+				nation2: "India",
+				date: "March 28-April 1, 2004",
+				score: "India 675/5d, Pakistan (f/o) 407 & 216; India won by an innings and 52 runs",
+				crickdlequestion: "India player scored 309 in this match?"
 			};
 
-			const correctPlayer = ["STOKES"];
+			const correctPlayer = ["SEHWAG"];
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
