--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Pakistan",
-				nation2: "India",
-				date: "March 28-April 1, 2004",
-				score: "India 675/5d, Pakistan (f/o) 407 & 216; India won by an innings and 52 runs",
-				crickdlequestion: "India player scored 309 in this match?"
+				nation1: "New Zealand",
+				nation2: "Sri Lanka",
+				date: "December 26-29, 2014"
+				score: "New Zealand (T: 105) 441 & 107/2, Sri Lanka (f/o) 138 & 407; New Zealand won by 8 wickets",
+				crickdlequestion: "New Zealand player scored 195 in this match?"
 			};
 
-			const correctPlayer = ["SEHWAG"];
+			const correctPlayer = ["MCCULLUM"];
 
 			const guessInputs = document.querySelectorAll(".guess-input");
 			const submitButtons = document.querySelectorAll("button[id^='submit']");
