--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 			const gameDetails = {
 				nation1: "New Zealand",
 				nation2: "Sri Lanka",
-				date: "December 26-29, 2014"
+				date: "December 26-29, 2014",
 				score: "New Zealand (T: 105) 441 & 107/2, Sri Lanka (f/o) 138 & 407; New Zealand won by 8 wickets",
 				crickdlequestion: "New Zealand player scored 195 in this match?"
 			};
