--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 		<script>
 			// Replace the sheet ID below with the ID of your own Google Sheet.
 const sheetId = '1sWHNpRKK_N1cc9yU2Ik0ml8e7urPYtoTO2xwS4KZaew';
-const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/$1sWHNpRKK_N1cc9yU2Ik0ml8e7urPYtoTO2xwS4KZaew/values/Sheet1!A1:F988`;
+const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/Sheet1!A1:F988`;
 
 // Store selected row index to avoid selecting it again.
 let selectedRowIndex;
